Added files from other github repo

--- a/index.html
+++ b/index.html
@@ -1,7 +1,49 @@
-<!DOCTYPE-html>
+<!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<title>Welcome to My Portfolio!</title>
 </head>
 <body>
+	<!--Header-->
+	<header>
+		<div id='name'>
+			<h2 class='white-text'>Brian Karabinchak</h2>
+		</div>
+		<div id='contact-link'>
+			<h3><a href='contact.html' class='leftborder'>Contact</a></h3>
+		</div>
+		<div id='portfolio-link'>
+			<h3><a href='portfolio.html' class='leftborder'>Portfolio</a></h3>
+		</div>
+		<div id='tutor-link'>
+			<h3><a href='tutor.html' class='leftborder'>Tutoring</a></h3>
+		</div>
+		<div id='about-link'>
+			<h3><a href='index.html'>About</a></h3>
+		</div>
+	</header>
+	<!--Main Section-->
+	<section id='main-content'>
+		<section id='aboutme'>
+			<h1 class='margin'>About Me</h1>
+			<hr>
+			<img src='assets/images/me.jpg' width=100px height=140px id='image'>
+			<p class='specialmargin'>Welcome to my site!  I'm Brian K.  I'm currently enrolled in Rutgers Coding Bootcamp to develop my skills as a <b><em>full stack developer</em></b>, which I'm excited about.  I made this decision after parting ways with my former employer where I worked as a data analyst at a forensic accounting firm.  I currently tutor mathematics for students ranging from Middle School to College.  You can find a more detailed description of my tutoring services <a href="tutor.html"><u>here</u></a>.</p>
+			<p class='horizontalmargin'>Before entering the working world, I attended <a href='www.rutgers.edu'>Rutgers University</a>, where I achieved a Bachelors of Arts in Mathematics.  I honed my tutoring skills during this time by working part time at Kumon Learning Center, where I taught middle schoolers and high schoolers topics ranging from basic Algebra through Calculus 2.</p>
+			<p class='horizontalmargin'>I am currently looking for new full time employment as a Full Stack Developer.  I believe my skills in mathematics, previous experience with OOP in Java and Python make a suitable candidate.  You can find a copy of my resume and related technical skills by request <a href='contacts.html'><u>here</u></a>.  A page of my web projects can be found <a href='portfolio.html'><u>here</u></a></p>
+		</section>
+		<aside>
+			<h2 class='margin'>Connect With Me</h2>
+			<hr>
+			<a href='https://github.com/bjk116'><img src='assets/images/githublogo.png' class='logo'></a>
+			<a href='https://www.linkedin.com/in/bkarabinchak'><img src='assets/images/linkedinlogo.png' class='logo'></a>
+			<a href='http://stackoverflow.com/users/2259778/bjk116?tab=profile'><img src='assets/images/stackoverflowlogo.png' class='logo'></a>
+		</aside>
+	</section>
+	<!--Footer-->
+	<footer class='push'>
+		<h4>Ⓒ Copyright 2016 Brian Karabinchak</h4>
+	</footer>
 </body>
 </html>
