Added content to tutor page

--- a/tutor.html
+++ b/tutor.html
@@ -26,6 +26,24 @@
 	<!--Main Section-->
 	<section id='main-content'>
 	<section id='tutor-content'>
+	<h1 class='margin'>Tutor Services</h1>
+	<hr>
+	<h2 class='horizontalmargin'>Qualifications</h2>
+	<p class='horizontalmargin'>During my time at Rutgers University, I worked part time at Kumon Learning Center where I accumulated over 1,000 hours of tutoring.  I tutored kids ranging from 4th grade to 11th grade.  The topics ranged from basic arithmetic all the way through Calclus 2 with integration and infinite sums.</p>
+	<p class='horizontalmargin'>At Rutgers, I graduated with a Bachelors Degree with Mathematics and a disdain for how mathematics is taught in our public education system.  I believe that rote memorization of formulas is not the answer and instead stress understanding why formulas are true, which I believe leads to greater flexibility in the student to know when and how to use them.  I am a advocate of using real world problems to show why we solve things in certain ways.</p>
+	<h2 class='horizontalmargin'>Status:</h2>
+	<p class='horizontalmargin'>I am currently accepting students, inquire <a href='contact.html'><u>here</u></a>.
+	<h3 class='horizontalmargin'><em><u>Subjects</u></em></h3>
+	<ul class='horizontalmargin'>
+		<li>Arithmetic</li>
+		<li>Algebra 1</li>
+		<li>Algebra 2</li>
+		<li>High School Geometry</li>
+		<li>Pre-Calculus</li>
+		<li>Calculus 1, 2, and 3</li>
+		<li>Differential Equations</li>
+		<li>And more!  Just Inquire</li>
+	</ul>
 	</section>
 	<aside>
 		<h2 class='margin'>Connect With Me</h2>
