Added folder for portfolio pictures, completed portfolio page completely

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,28 @@
 	<!--Main Section-->
 	<section id='main-content'>
 	<section id='portfolio-content'>
+		<h2 class='margin'>My Portfolio</h2>
+		<hr>
+		<div class='img'>
+			<img src='assets/images/portfolio/hangman.jpg' class='imgbox'>
+			<h3 class='imgtext'>Hangman</h2>
+		</div>
+		<div class='img'>
+			<img src='assets/images/portfolio/rockpaperscissor.jpg' class='imgbox'>
+			<h3 class='imgtext'>Rock Paper Scissor</h2>
+		</div>
+		<div class='img'>
+			<img src='assets/images/portfolio/rpg.jpg' class='imgbox'>
+			<h3 class='imgtext'>RPG</h2>
+		</div>
+		<div class='img'>
+			<img src='assets/images/portfolio/rutgersinfowidget.jpg' class='imgbox'>
+			<h3 class='imgtext'>Rutgers Info Widget</h2>
+		</div>
+		<div class='img'>
+			<img src='assets/images/portfolio/trivia.jpg' class='imgbox'>
+			<h3 class='imgtext'>Trivia Game</h2>
+		</div>
 	</section>
 	<aside>
 		<h2 class='margin'>Connect With Me</h2>
