Finished portfolio text over images

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,37 +25,37 @@
 	</header>
 	<!--Main Section-->
 	<section id='main-content'>
-	<section id='portfolio-content'>
-		<h2 class='margin'>My Portfolio</h2>
-		<hr>
-		<div class='img'>
-			<img src='assets/images/portfolio/hangman.jpg' class='imgbox'>
-			<h3 class='imgtext'>Hangman</h2>
-		</div>
-		<div class='img'>
-			<img src='assets/images/portfolio/rockpaperscissor.jpg' class='imgbox'>
-			<h3 class='imgtext'>Rock Paper Scissor</h2>
-		</div>
-		<div class='img'>
-			<img src='assets/images/portfolio/rpg.jpg' class='imgbox'>
-			<h3 class='imgtext'>RPG</h2>
-		</div>
-		<div class='img'>
-			<img src='assets/images/portfolio/rutgersinfowidget.jpg' class='imgbox'>
-			<h3 class='imgtext'>Rutgers Info Widget</h2>
-		</div>
-		<div class='img'>
-			<img src='assets/images/portfolio/trivia.jpg' class='imgbox'>
-			<h3 class='imgtext'>Trivia Game</h2>
-		</div>
-	</section>
-	<aside>
-		<h2 class='margin'>Connect With Me</h2>
-		<hr>
-		<a href='https://github.com/bjk116'><img src='assets/images/githublogo.png' class='logo'></a>
-		<a href='https://www.linkedin.com/in/bkarabinchak'><img src='assets/images/linkedinlogo.png' class='logo'></a>
-		<a href='http://stackoverflow.com/users/2259778/bjk116?tab=profile'><img src='assets/images/stackoverflowlogo.png' class='logo'></a>
-	</aside>
+		<section id='portfolio-content'>
+			<h2 class='margin'>My Portfolio</h2>
+			<hr>
+			<div class='img'>
+				<img src='assets/images/portfolio/hangman.jpg'>
+				<h3 class='imgtext'>Hangman</h2>
+			</div>
+			<div class='img'>
+				<img src='assets/images/portfolio/rockpaperscissor.jpg'>
+				<h3 class='imgtext'>Rock Paper Scissor</h2>
+			</div>
+			<div class='img'>
+				<img src='assets/images/portfolio/rpg.jpg'>
+				<h3 class='imgtext'>RPG</h2>
+			</div>
+			<div class='img'>
+				<img src='assets/images/portfolio/rutgersinfowidget.jpg'>
+				<h3 class='imgtext'>Rutgers Info Widget</h2>
+			</div>
+			<div class='img'>
+				<img src='assets/images/portfolio/trivia.jpg'>
+				<h3 class='imgtext'>Trivia Game</h2>
+			</div>
+		</section>
+		<aside>
+			<h2 class='margin'>Connect With Me</h2>
+			<hr>
+			<a href='https://github.com/bjk116'><img src='assets/images/githublogo.png' class='logo'></a>
+			<a href='https://www.linkedin.com/in/bkarabinchak'><img src='assets/images/linkedinlogo.png' class='logo'></a>
+			<a href='http://stackoverflow.com/users/2259778/bjk116?tab=profile'><img src='assets/images/stackoverflowlogo.png' class='logo'></a>
+		</aside>
 	</section>
 	<!--Footer-->
 	<footer class='push'>
