Created and finalized contact page, entire website for now

--- a/contact.html
+++ b/contact.html
@@ -25,15 +25,26 @@
 	</header>
 	<!--Main Section-->
 	<section id='main-content'>
-	<section id='contact-info'>
-	</section>
-	<aside>
-		<h2 class='margin'>Connect With Me</h2>
-		<hr>
-		<a href='https://github.com/bjk116'><img src='assets/images/githublogo.png' class='logo'></a>
-		<a href='https://www.linkedin.com/in/bkarabinchak'><img src='assets/images/linkedinlogo.png' class='logo'></a>
-		<a href='http://stackoverflow.com/users/2259778/bjk116?tab=profile'><img src='assets/images/stackoverflowlogo.png' class='logo'></a>
-	</aside>
+		<section id='contact-content'>
+			<h2 class='margin'>Contact Me!</h2>
+			<hr>
+			<form id='messageform'>
+				<h4 class='margin'>Name</h4>
+				<input type='text' name='name' id='nameinput' class='margin' placeholder='Full Name'>
+				<h4 class='margin'>Email</h4>
+				<input type='email' name='email' id='emailinput' class='margin' placeholder='yourmail@something.com'>
+				</form>
+				<h4 class='margin'>Message</h4>
+				<textarea rows="8" cols="70" class='margin'>Enter message...</textarea>
+				<input type='submit' id='messageform' class='margin'>
+		</section>
+		<aside>
+			<h2 class='margin'>Connect With Me</h2>
+			<hr>
+			<a href='https://github.com/bjk116'><img src='assets/images/githublogo.png' class='logo'></a>
+			<a href='https://www.linkedin.com/in/bkarabinchak'><img src='assets/images/linkedinlogo.png' class='logo'></a>
+			<a href='http://stackoverflow.com/users/2259778/bjk116?tab=profile'><img src='assets/images/stackoverflowlogo.png' class='logo'></a>
+		</aside>
 	</section>
 	<!--Footer-->
 	<footer class='push'>
