--- a/portfolio.html
+++ b/portfolio.html
@@ -40,8 +40,8 @@
 				<img src='assets/images/Portfoliopics/rpg.jpg'>
 				<h3 class='imgtext'>RPG</h2>
 			</div>
-			<div class='img'>
-				<img src='assets/images/Portfoliopics/rutgersinfowidget.jpg'>
+			<div class='img'
+>				<img src='assets/images/Portfoliopics/rutgersinfowidget.jpg'>
 				<h3 class='imgtext'>Rutgers Info Widget</h2>
 			</div>
 			<div class='img'>
