Fixed copyright to &copy;

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 	</section>
 	<!--Footer-->
 	<footer class='push'>
-		<h4>Ⓒ Copyright 2016 Brian Karabinchak</h4>
+		<h4>&copy; Copyright 2016 Brian Karabinchak</h4>
 	</footer>
 </body>
 </html>
