--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 		<div id='name'>
 			<h2 class='white-text'>Brian Karabinchak</h2>
 		</div>
-		<div id='contact-link'>
-			<h3><a href='contact.html' class='leftborder'>Contact</a></h3>
+ 			<h3><a href='contact.html' class='leftborder'>Contact</a></h3>
 		</div>
 		<div id='portfolio-link'>
 			<h3><a href='portfolio.html' class='leftborder'>Portfolio</a></h3>
@@ -43,7 +42,7 @@
 	</section>
 	<!--Footer-->
 	<footer class='push'>
-		<h4>Ⓒ Copyright 2016 Brian Karabinchak</h4>
+		<h4>&copy; Copyright 2016 Brian Karabinchak</h4>
 	</footer>
 </body>
 </html>
