--- a/tutor.html
+++ b/tutor.html
@@ -55,7 +55,7 @@
 	</section>
 	<!--Footer-->
 	<footer class='push'>
-		<h4>Ⓒ Copyright 2016 Brian Karabinchak</h4>
+		<h4>&copy; Copyright 2016 Brian Karabinchak</h4>
 	</footer>
 </body>
 </html>
