--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel='stylesheet' type='text/css' href='assets/css/style.css'>
+	<link rel='stylesheet' type='text/css' href='assets/css/reset.css'>
 	<title>My Projects</title>
 </head>
 <body>
