--- a/tutor.html
+++ b/tutor.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<link rel='stylesheet' type='text/css' href='assets/css/style.css'>
-	<link rel='stylesheet' type='text/css' href='assets/css/reset.css'>
 	<title>My Tutoring Services</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
 	<!--Header-->
