--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<div id='name'>
 			<h2 class='white-text'>Brian Karabinchak</h2>
 		</div>
+		<div id='contact-link'>
  			<h3><a href='contact.html' class='leftborder'>Contact</a></h3>
 		</div>
 		<div id='portfolio-link'>
