--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel='stylesheet' type='text/css' href='assets/css/style.css'>
 	<title>Contact Me</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 </head>
 <body>
 	<!--Header-->
